--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!--    phan tren cung-->
     <TextView
+        android:id="@+id/tvheader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="24dp"
+        android:text="accuweather"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/tvlocation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Phu Ly, Viet Nam"
+        app:layout_constraintTop_toBottomOf="@+id/tvheader"
+        app:layout_constraintStart_toStartOf="@+id/tvheader"
+        app:layout_constraintEnd_toEndOf="@+id/tvheader" />
+    <TextView
+        android:id="@+id/tvStatus"
+        android:text="Khong co mua trong 60p"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/tvlocation"
+        app:layout_constraintEnd_toEndOf="@+id/tvlocation"
+        app:layout_constraintTop_toBottomOf="@+id/tvlocation"
+        android:layout_marginTop="20sp"/>
+
+
+    <!--    phan than -->
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvStatus"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+
+    <!--    thanh bar duois cung-->
+    <LinearLayout
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@android:color/darker_gray"
+        android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <Button
+            android:id="@+id/btn_today"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Hôm nay"
+            android:drawableTop="@drawable/baseline_calendar_today_24"
+            android:textSize="8sp"
+            android:layout_marginEnd="3dp"/>
+
+        <Button
+            android:id="@+id/btn_hourly"
+            android:layout_width="4dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Theo giờ"
+
+            android:drawableTop="@drawable/baseline_watch_later_24"
+            android:textSize="8sp"
+            android:layout_marginEnd="3dp"/>
+
+        <Button
+            android:id="@+id/btn_daily"
+            android:layout_width="4dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Hằng ngay"
+            android:drawableTop="@drawable/baseline_calendar_month_24"
+            android:textSize="8sp"
+            android:layout_marginEnd="3dp"/>
+
+        <Button
+            android:id="@+id/btn_radar"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Ra-đa"
+            android:drawableTop="@drawable/baseline_radar_24"
+            android:textSize="8sp"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
