--- a/app/src/main/res/layout/current_condition.xml
+++ b/app/src/main/res/layout/current_condition.xml
@@ -7,8 +7,9 @@
 
     <TextView
         android:id="@+id/text_label"
-        android:layout_width="300dp"
+        android:layout_width="270dp"
         android:layout_height="23dp"
+        android:layout_marginStart="10dp"
         android:text="Nhiệt độ"
         android:textSize="16sp"
         android:textColor="@color/white"
