--- a/app/src/main/res/layout/current_condition.xml
+++ b/app/src/main/res/layout/current_condition.xml
@@ -3,11 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="4dp">
+    android:paddingTop="5dp"
+   >
 
     <TextView
         android:id="@+id/text_label"
-        android:layout_width="270dp"
+        android:layout_width="220dp"
         android:layout_height="23dp"
         android:layout_marginStart="10dp"
         android:text="Nhiệt độ"
@@ -24,6 +25,7 @@
         android:layout_height="wrap_content"
         android:text="79°"
         android:textSize="16sp"
+        android:textStyle="bold"
         android:textColor="@color/white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/text_label"/>
@@ -34,11 +36,20 @@
         android:layout_height="wrap_content"
         android:text="Độ F"
         android:textSize="16sp"
+        android:textStyle="bold"
         android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@id/text_value"
         app:layout_constraintTop_toTopOf="parent"
+        android:paddingBottom="3dp"
      />
+    <View
+        android:layout_width="270dp"
+        android:layout_height="1dp"
 
+        app:layout_constraintTop_toBottomOf="@id/text_label"
+        app:layout_constraintStart_toStartOf="@id/text_label"
+
+        android:background="@color/divider_color" />
 
 
 
