--- a/app/src/main/res/layout/sun_moon.xml
+++ b/app/src/main/res/layout/sun_moon.xml
@@ -3,9 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:paddingEnd="8dp"
+    android:paddingStart="8dp"
+
+
+   >
 
     <ImageView
         android:id="@+id/imgMoon"
@@ -13,10 +17,13 @@
         android:layout_height="50dp"
         android:src="@drawable/sun"
         android:scaleType="fitXY"
+        app:tint="@color/sunMoonColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+
+        />
 
     <TextView
         android:id="@+id/tvmoon"
@@ -24,13 +31,25 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="thoi gian"
+        android:textStyle="bold"
+        android:textSize="16sp"
         android:layout_marginStart="20dp"
         app:layout_constraintStart_toEndOf="@id/imgMoon"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+
          />
 
+    <View
+        android:layout_width="1dp"
+        android:layout_height="40dp"
 
+        app:layout_constraintEnd_toStartOf="@id/linearLayout2"
+        app:layout_constraintTop_toTopOf="@id/linearLayout2"
+        app:layout_constraintBottom_toBottomOf="@id/linearLayout2"
+        android:background="@color/divider_color"
+        android:layout_marginEnd="10dp"
+       />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -41,7 +60,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
 
-        android:layout_marginStart="120dp">
+        android:layout_marginStart="60dp">
 
         <TextView
             android:id="@+id/mtv2moon"
@@ -54,7 +73,17 @@
             android:id="@+id/mtv3moon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:text="2" />
     </LinearLayout>
+    <View
+        android:layout_marginTop="8dp"
+        android:layout_width="270dp"
+        android:layout_height="1dp"
+
+        app:layout_constraintTop_toBottomOf="@+id/imgMoon"
+        app:layout_constraintStart_toStartOf="@+id/imgMoon"
+
+        android:background="@color/divider_color" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
