--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="divider_color">#BDBDBD</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="backgrowColor">#1E3A5F</color>
+    <color name="backgrowRcItem">#0D2538</color>
+    <color name="sunMoonColor">#4AF7D9</color>
+
 </resources>
