--- a/app/src/main/res/layout/fragment_app_bar.xml
+++ b/app/src/main/res/layout/fragment_app_bar.xml
@@ -8,7 +8,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/backgrowRcItem"
+        android:background="@color/backgrowColor"
         app:title="App Toolbar"
         app:titleTextColor="@android:color/white" />
 </com.google.android.material.appbar.AppBarLayout>
