--- a/app/src/main/res/layout/hour_fragment.xml
+++ b/app/src/main/res/layout/hour_fragment.xml
@@ -5,19 +5,14 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/texthour"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="hour"
-        android:textSize="40sp"
-        />
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/mainRecyclerView"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/texthour"
-        app:layout_constraintBottom_toTopOf="@+id/navigation" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <FrameLayout
         android:id="@+id/navigation"
