--- a/app/src/main/res/layout/a_current_condition.xml
+++ b/app/src/main/res/layout/a_current_condition.xml
@@ -21,7 +21,7 @@
         android:background="@color/backgrowColor"
         android:id="@+id/childRecyclerView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
