--- a/app/src/main/res/layout/sun_moon.xml
+++ b/app/src/main/res/layout/sun_moon.xml
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="thoi gian"
+        android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="16sp"
         android:layout_marginStart="20dp"
