--- a/app/src/main/res/layout/fragment_navigation.xml
+++ b/app/src/main/res/layout/fragment_navigation.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@android:color/darker_gray"
+    android:background="@color/backgrowColor"
     android:padding="5dp">
 
     <Button
@@ -14,6 +14,7 @@
         android:text="Hôm nay"
         android:drawableTop="@drawable/baseline_calendar_today_24"
         android:textSize="8sp"
+
         android:layout_marginEnd="3dp"/>
 
     <Button
