--- a/app/src/main/res/layout/fragment_app_bar.xml
+++ b/app/src/main/res/layout/fragment_app_bar.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/tvCityName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hà Nội , VN"
+                android:text="Loading"
                 android:textColor="@android:color/white"
                 android:textSize="20sp"
                 android:layout_marginEnd="8dp"/>
@@ -30,7 +30,7 @@
                 android:id="@+id/tvTemperature"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="8°C"
+                android:text=" ..."
                 android:textColor="@android:color/white"
                 android:textSize="20sp"/>
 
