--- a/app/src/main/res/layout/a_current_condition.xml
+++ b/app/src/main/res/layout/a_current_condition.xml
@@ -8,17 +8,30 @@
     android:paddingEnd="30dp"
     android:paddingTop="30dp">
     <TextView
-        android:background="@color/backgrowColor"
+        android:background="@color/backgrow_02"
         android:id="@+id/textA"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingStart="20dp"
         android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         android:paddingBottom="10dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
+    <View
+
+        android:layout_width="270dp"
+        android:layout_height="1dp"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/childRecyclerView"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="10dp"
+        android:background="@color/white" />
+
     <androidx.recyclerview.widget.RecyclerView
-        android:background="@color/backgrowColor"
+        android:background="@color/backgrow_02"
         android:id="@+id/childRecyclerView"
         android:layout_width="0dp"
         android:layout_height="match_parent"
