--- a/app/src/main/res/layout/daily_fragment_item.xml
+++ b/app/src/main/res/layout/daily_fragment_item.xml
@@ -19,7 +19,6 @@
         android:id="@+id/imgv_1"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        app:tint = "@color/white"
         app:layout_constraintTop_toBottomOf="@id/tv_1"
         app:layout_constraintStart_toStartOf="@id/tv_1"
 
@@ -51,6 +50,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="60*C"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/imgv_2"
         android:layout_marginBottom="20dp"
@@ -59,9 +60,8 @@
         android:id="@+id/imgv_2"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        app:tint = "@color/white"
         android:src="@drawable/sun"
-
+        app:tint = "@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         />
@@ -71,6 +71,8 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="100%"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/imgv_2"
         app:layout_constraintBottom_toBottomOf="parent"
         />
