--- a/app/src/main/res/layout/forecast_day.xml
+++ b/app/src/main/res/layout/forecast_day.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingBottom="10dp">
 
 
     <TextView
@@ -13,6 +14,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:text="29-07"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         android:textSize="20sp"
         />
     <ImageView
@@ -23,7 +26,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_day"
         android:src="@drawable/rain"
-        app:tint = "@color/white"
+
         android:scaleType="fitXY"
         />
     <TextView
@@ -44,6 +47,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="80^C"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/tv_day2"
         app:layout_constraintBottom_toBottomOf="@id/tv_day2"
         android:id="@+id/tv_day3"
@@ -62,6 +67,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="86%"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/tv_day2"
