--- a/app/src/main/res/layout/forecast_hour.xml
+++ b/app/src/main/res/layout/forecast_hour.xml
@@ -10,6 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="12"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -20,7 +22,7 @@
             android:src="@drawable/cloud"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/forecast_hour"
-            app:tint="@color/white"
+
             android:id="@+id/forecast_img"
             />
 
@@ -32,6 +34,8 @@
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:text="94*C"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/forecast_img"/>
 
@@ -50,6 +54,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="44%"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/forecast_rain_img"
         app:layout_constraintTop_toBottomOf="@id/forecast_t" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
