--- a/app/src/main/res/layout/fragment_app_bar.xml
+++ b/app/src/main/res/layout/fragment_app_bar.xml
@@ -8,7 +8,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/backgrowColor"
+        android:background="@color/backgrow_01"
         app:title="App Toolbar"
         app:titleTextColor="@android:color/white" >
         <LinearLayout
@@ -22,7 +22,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Loading"
-                android:textColor="@android:color/white"
+                android:textColor="@color/white"
+                android:textStyle="bold"
                 android:textSize="20sp"
                 android:layout_marginEnd="8dp"/>
 
@@ -31,7 +32,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=" ..."
-                android:textColor="@android:color/white"
+                android:textColor="@color/white"
+                android:textStyle="bold"
                 android:textSize="20sp"/>
 
 
