--- a/app/src/main/res/layout/hour_fragment_item.xml
+++ b/app/src/main/res/layout/hour_fragment_item.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+   android:padding="10dp" >
 
 
     <TextView
@@ -13,6 +15,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:text="29-07"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         android:textSize="20sp"
         />
     <ImageView
@@ -23,7 +27,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_day"
         android:src="@drawable/rain"
-        app:tint = "@color/white"
+
         android:scaleType="fitXY"
         />
     <TextView
@@ -44,6 +48,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="80^C"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/tv_day2"
         app:layout_constraintBottom_toBottomOf="@id/tv_day2"
         android:id="@+id/tv_day3"
@@ -62,9 +68,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="86%"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/tv_day2"
         android:id="@+id/tv_day4"
         />
+    <View
+
+        android:layout_width="270dp"
+        android:layout_height="1dp"
+      app:layout_constraintStart_toStartOf="@id/tv_day"
+        app:layout_constraintEnd_toEndOf="@id/tv_day4"
+        app:layout_constraintTop_toBottomOf="@id/img_day"
+        android:layout_marginTop="10dp"
+        android:background="@color/white"
+       />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
